fix(mobile): change layout of grid in ditc to display properly on mobile

--- a/styles/portfolio/ditc.css
+++ b/styles/portfolio/ditc.css
@@ -339,6 +339,7 @@ hr {
 
 .gallery-grid img {
   width: 100%;
+  height: 100%;
   object-fit: contain;
   border: none;
   border-radius: 1em;
@@ -354,8 +355,8 @@ hr {
   .gallery {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
-    max-width: 13em;
   }
 
   .gallery header h2 {
@@ -363,9 +364,10 @@ hr {
   }
 
   .gallery-grid {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    display: grid;
+    grid-template-columns: initial;
+    grid-template-rows: 30vw;
+    gap: 1em 1em;
   }
 }
 
